--- a/css/custom.css
+++ b/css/custom.css
@@ -19,9 +19,13 @@
   width: 200px;
   height: 200px;
   position: relative;
-  background-color: #D3D3D3;
   border-radius:1%;
   font-stretch: expanded;
+  background: #D3D3D3; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#d3d3d3, white); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#d3d3d3, white); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#d3d3d3, white); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#d3d3d3, white); /* Standard syntax (must be last) */
 }
 @media screen and (max-width: 600px) {
   .visualisationArea {
