--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,6 @@
 .circle
 {
-  position: absolute;
-  transform: translateX(112%);
+  position: relative;
   margin:0 auto;
   width:200px;
   height:200px;
@@ -16,8 +15,8 @@
   background:#F7498F;
 }
 .visualisationArea {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   position: relative;
   border-radius:1%;
   font-stretch: expanded;
